preventing button from overlapping with accordion text

--- a/scss/modules/_glossary.scss
+++ b/scss/modules/_glossary.scss
@@ -48,7 +48,7 @@
   }
 
   .accordion__header {
-    padding: 1rem 0;
+    padding: 1rem 4rem 1rem 0;
   }
 
   .accordion__button {
